# intfl

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  demo.webm
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
docs/html/: _app_8cpp.html  _app_8cpp__incl.map  _app_8cpp__incl.md5  _app_8hpp.html  _app_8hpp.js  _app_8hpp__dep__incl.map  _app_8hpp__dep__incl.md5  _app_8hpp__incl.map  _app_8hpp__incl.md5  _app_8hpp_source.html  _colors_8cpp.html  _colors_8cpp__incl.map  _colors_8cpp__incl.md5  _colors_8hpp.html  _colors_8hpp.js  _colors_8hpp__dep__incl.map  _colors_8hpp__dep__incl.md5  _colors_8hpp__incl.map  _colors_8hpp__incl.md5  _colors_8hpp_source.html  _commands_8cpp.html  _commands_8cpp.js  _commands_8cpp__incl.map  _commands_8cpp__incl.md5  _commands_8hpp.html  _commands_8hpp.js  _commands_8hpp__dep__incl.map  _commands_8hpp__dep__incl.md5  _commands_8hpp__incl.map  _commands_8hpp__incl.md5  _commands_8hpp_source.html  _directory_8cpp.html  _directory_8cpp__incl.map  _directory_8cpp__incl.md5  _directory_8hpp.html  _directory_8hpp.js  _directory_8hpp__dep__incl.map  _directory_8hpp__dep__incl.md5  _directory_8hpp__incl.map  _directory_8hpp__incl.md5  (+177 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  enumvalues_0.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+28 more)
include/: App.hpp  Colors.hpp  Commands.hpp  Directory.hpp  File.hpp  FileReprPrinter.hpp  HandleInput.hpp  MainLoop.hpp  TreeReprStr.hpp  Types.hpp  Window.hpp
src/: App.cpp  Colors.cpp  Commands.cpp  Directory.cpp  File.cpp  HandleInput.cpp  MainLoop.cpp  PrintFileRepr.cpp  Window.cpp  main.cpp  printFileRepr.cpp
(+40 files in other folders)
